--- a/SHMemo/SHMemo/Base.lproj/Main.storyboard
+++ b/SHMemo/SHMemo/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Per-ee-m8o">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="GLh-hm-wiQ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,6 +40,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="R5A-5Z-otl" kind="show" identifier="ComposeViewSegue" id="ZDl-3h-DwE"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -46,13 +50,97 @@
                             <outlet property="delegate" destination="Per-ee-m8o" id="ftZ-qs-BxS"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="ASU-18-C3L">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="MRR-LV-6fh">
+                            <connections>
+                                <segue destination="R5A-5Z-otl" kind="show" id="hbm-K5-PPP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7df-va-Lg3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="21" y="21"/>
+            <point key="canvasLocation" x="930.43478260869574" y="20.758928571428569"/>
+        </scene>
+        <!--Compose View Controller-->
+        <scene sceneID="Ryt-iO-3Qe">
+            <objects>
+                <viewController id="R5A-5Z-otl" customClass="ComposeViewController" customModule="SHMemo" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ym7-Gg-KsD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="zYy-JB-jZB">
+                                <rect key="frame" x="0.0" y="88" width="414" height="777"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="4Wp-D4-g6N">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" insetsLayoutMarginsFromSafeArea="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ROZ-ir-SEm">
+                                        <rect key="frame" x="0.0" y="34" width="414" height="743"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <color key="textColor" systemColor="labelColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ROZ-ir-SEm" firstAttribute="top" secondItem="4Wp-D4-g6N" secondAttribute="bottom" id="psB-sf-R6Z"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="J4A-4n-rHf"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4Wp-D4-g6N" firstAttribute="top" secondItem="J4A-4n-rHf" secondAttribute="top" id="2VO-he-xFn"/>
+                            <constraint firstItem="ROZ-ir-SEm" firstAttribute="leading" secondItem="J4A-4n-rHf" secondAttribute="leading" id="AT4-Yr-a1K"/>
+                            <constraint firstItem="ROZ-ir-SEm" firstAttribute="bottom" secondItem="J4A-4n-rHf" secondAttribute="bottom" constant="3" id="CyG-CW-z85"/>
+                            <constraint firstItem="J4A-4n-rHf" firstAttribute="trailing" secondItem="4Wp-D4-g6N" secondAttribute="trailing" id="Pwq-Aq-z3b"/>
+                            <constraint firstItem="J4A-4n-rHf" firstAttribute="trailing" secondItem="ROZ-ir-SEm" secondAttribute="trailing" id="Xnt-bf-FXc"/>
+                            <constraint firstItem="4Wp-D4-g6N" firstAttribute="leading" secondItem="J4A-4n-rHf" secondAttribute="leading" id="cZ9-w7-0bD"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="8Ru-9Z-FwT">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="jhF-O2-6HE"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="contentTextView" destination="ROZ-ir-SEm" id="pzs-Oo-l0k"/>
+                        <outlet property="titleTextField" destination="4Wp-D4-g6N" id="jwd-6j-I1I"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kiy-Of-a3e" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1760.8695652173915" y="20.758928571428569"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="PXv-WT-6KF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GLh-hm-wiQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IIv-Ds-yaP">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Per-ee-m8o" kind="relationship" relationship="rootViewController" id="0ZK-sl-EpO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pbU-Xf-MSc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="20.289855072463769" y="20.758928571428569"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="ZDl-3h-DwE"/>
+    </inferredMetricsTieBreakers>
     <resources>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
